# Butterfly-Audio_min-devkit

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: bfa.stacked_tables~.maxref.xml  bfa.table_preprocessing.maxref.xml  bfa.table_preprocessing~.maxref.xml
source/projects/bfa.stacked_tables_tilde/: CMakeLists.txt  audio_processor.h  bfa.stacked_tables_tilde.cpp  morphing_wavetable_oscillator.h  stacked_frames.h  stacked_tables_helper_functions.h
source/projects/bfa.table_preprocessing/: CMakeLists.txt  bfa.table_preprocessing.cpp  bfa.table_preprocessing_test.cpp  event.h  geometry.h  graphics_transform.h  min_event_wrapper.h  min_painter.h  painter.h  sample_preprocessor.cpp  sample_preprocessor.h  table_preprocessing_helper_functions.h
source/projects/bfa.table_preprocessing_tilde/: CMakeLists.txt  bfa.table_preprocessing_tilde.cpp  table_preprocessing_helper_functions.h
submodules/bfa-lib/: CMakeLists.txt  README.md
submodules/bfa-lib/src/math/: CMakeLists.txt
submodules/bfa-lib/src/math/src/: constants.h  fft.h  interpolation.h  matrix.h  signal_generators.h  solvers.h
submodules/bfa-lib/src/modulation/: CMakeLists.txt
submodules/bfa-lib/src/modulation/src/: lfo.h  modulation_routing.h  modulation_routing_utilities.h
submodules/bfa-lib/src/synth/: CMakeLists.txt
submodules/bfa-lib/src/synth/src/: wavetable.h  wavetable_oscillator.h
submodules/bfa-lib/src/utilities/: CMakeLists.txt
submodules/bfa-lib/src/utilities/src/: stable_id_array.h  stable_id_vector.h
submodules/bfa-lib/src/wave/: CMakeLists.txt
submodules/bfa-lib/src/wave/src/: antialiase.h  waveform_processing.h
